--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -38,6 +38,6 @@
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
-        android:layout_width="match_parent"
-        android:layout_height="400dp" />
+        android:layout_width="300dp"
+        android:layout_height="270dp" />
 </LinearLayout>
